cmake_minimum_required(VERSION 3.1.0)
project(TP4_exercice2)

set (CMAKE_CXX_STANDARD 14)
set (CMAKE_CXX_STANDARD_REQUIRED on)
set (CMAKE_CXX_EXTENSIONS off)
if (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
    add_compile_options(-Wall -Wpedantic)
endif()
add_executable(${PROJECT_NAME} "main.cpp" document.cc documentecrit.cc video.cc livre.cc periodique.cc bibliotheque.cc)
